Remove customer testimony and fix alignment in mobile view of why choose us section

--- a/website/smartconcept/src/responsiveComponent/home/style.css
+++ b/website/smartconcept/src/responsiveComponent/home/style.css
@@ -115,7 +115,9 @@
     justify-content: center;
     flex-direction: column;  
 }
-
+.home-container3-row div{
+    padding: 0;
+}
 .home-container3-row h4{
     margin: 10px;
     text-align: left;
